Added xstream.addPermission(AnyTypePermission.ANY) to be able to access all classes loaded via JARs. Switched from JSON to XML because xstream could not serialize JSON with Java types such as ArrayList correctly.